--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile.dev
       context: ./git-repo-fetcher
     volumes:
-      - /app/node_modules
+      - /app/node_modules #bookmark volume (i.e. do NOT map to volume)
       - ./git-repo-fetcher:/usr/src/app
     environment:
       - REDIS_HOST=redis
