--- a/git-repo-fetcher/package.json
+++ b/git-repo-fetcher/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-redis": "^1.1.7",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.2",
-    "redis": "^2.8.0"
+    "nodemon": "^2.0.2"
   }
 }
